--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ const { title } = Astro.props;
 	<body>
 		<slot />
 	</body>
+    <link rel="icon" type="image/svg+xml" href="/trumpet_favicon.svg" />
 </html>
 <style is:global>
 	:root {
