--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,13 @@
 <nav class="pt-4 pb-12 ml-4 font-anton">
   <ul class="flex justify-between">
-    <div class="justify-start flex gap-8">
-      <li>HIREHORNPLAYERS.COM</li>
-      <!-- <li>Home</li> -->
-    </div>
-    <div class="justify-end flex gap-4">
-      <!-- <li>Insta</li> -->
-      <!-- <li>twitter</li> -->
-    </div>
+    <li>
+      <div class="justify-start flex gap-8">HIREHORNPLAYERS.COM</div>
+    </li>
+    <li>
+      <div class="justify-end flex gap-4">
+        <!-- Insta -->
+        <!-- twitter -->
+      </div>
+    </li>
   </ul>
 </nav>
