Add prettier tailwind plugin and format

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
-<nav class="pt-4 pb-12 ml-4 font-anton">
+<nav class="ml-4 pb-12 pt-4 font-anton">
   <ul class="flex justify-between">
     <li>
-      <div class="justify-start flex gap-8">HIREHORNPLAYERS.COM</div>
+      <div class="flex justify-start gap-8">HIREHORNPLAYERS.COM</div>
     </li>
     <li>
-      <div class="justify-end flex gap-4">
+      <div class="flex justify-end gap-4">
         <!-- Insta -->
         <!-- twitter -->
       </div>
