--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<nav class="ml-4 pb-12 pt-4 font-anton">
+<nav class="ml-4 pt-4 font-anton">
   <ul class="flex justify-between">
     <li>
       <div class="flex justify-start gap-8">HIREHORNPLAYERS.COM</div>
