Add marquee and make some elements responsive

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -8,7 +8,7 @@ interface Props {
 const { text, text2, text3 } = Astro.props;
 ---
 
-<div class="ml-4 mt-12 flex w-max flex-col -space-y-1.5 font-anton text-6xl">
+<div class="ml-4 mt-12 flex w-max flex-col -space-y-1.5 font-anton text-6xl md:-mr-16 md:mt-8 z-0 lg:text-[6rem]">
   <h1>{text}</h1>
   <h1>{text2}</h1>
   <h1>{text3}</h1>
