--- a/src/components/DataSecurityArticle.astro
+++ b/src/components/DataSecurityArticle.astro
@@ -4,7 +4,7 @@
   <h5 class="mx-auto mt-8 w-11/12 font-anton text-base italic font-[700] ">
     ENSURING DATA SECURITY WITH A TOUCH OF BRASS
   </h5>
-  <p class="mt-4 font-acumin leading-4">
+  <p class="mt-4 mb-6 font-acumin leading-4">
     At hirehornplayers.com, we prioritize your data privacy and security. We
     collect essential information, including your name, email, location, and
     event preferences, to facilitate our services seamlessly. Be assured, your
