--- a/src/components/FluidBanner.astro
+++ b/src/components/FluidBanner.astro
@@ -7,7 +7,7 @@ const { text } = Astro.props;
 ---
 
 <h2
-  class="mx-auto mt-8 w-11/12 whitespace-nowrap text-center font-anton text-[18vw]"
+  class="mx-auto w-11/12 text-center font-anton text-[18vw]"
 >
   {text}
 </h2>
