--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,20 @@
-<footer class="bg-black text-white">
-  hi
+---
+import CircleButton from "../components/CircleButton.astro";
+---
+
+<footer class="pl-4 pb-4 bg-[#0d0d0d] text-white">
+  <h2 class="mb-4 pt-8 font-anton text-2xl">BRASS IN THE KNOW</h2>
+
+  <p class="font-semibold text-[13px] tracking-tighter mb-4">Please help us grow by joining our email list!</p>
+
+  <form action='/lists' method='post' class="mb-4">
+    <input class="font-acumin text-xs py-4 px-5" type='text' name='email_address' placeholder='Email Address' value=''>
+    <CircleButton text="JOIN" />
+  </form>
+
+  <p class="mr-4 tracking-tighter leading-tight text-[12px]">
+    By signing up for our mailing list, you consent to receive semi-occasional
+    updates. We respect your privacy and will not share your email address with
+    third parties.
+  </p>
 </footer>
