--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,7 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
     <link href="https://fonts.cdnfonts.com/css/acumin-pro" rel="stylesheet" />
+    <link href="https://www.nerdfonts.com/assets/css/webfont.css" rel="stylesheet" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
@@ -41,5 +42,8 @@ const { title } = Astro.props;
       Bitstream Vera Sans Mono,
       Courier New,
       monospace;
+  }
+  input, select{
+    height: 1.5rem;
   }
 </style>
