--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ import CircleButton from "../components/CircleButton.astro";
     <CircleButton text="JOIN" />
   </form>
 
-  <p class="mr-4 tracking-tighter leading-tight text-[12px]">
+  <p class="mr-4 tracking-tighter leading-tight text-[12px] lg:w-3/5">
     By signing up for our mailing list, you consent to receive semi-occasional
     updates. We respect your privacy and will not share your email address with
     third parties.
