--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import RectangleButton from "../components/RectangleButton.astro";
     <Marquee />
     <FluidBanner text="BORN 2 HORN" />
 
-    <div class="md:flex items-center">
+    <div class="md:flex items-center mb-4">
       <div class="mx-4 md:w-1/2 md:order-last md:mr-6">
         <DescriptionArticle />
       </div>
