--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -1,4 +1,4 @@
-<div class="overflow-x-hidden relative border-[#ff6123] border-y mt-12 md:mb-12 h-16 flex items-center font-acumin text-xs">
+<div class="overflow-x-hidden relative border-[#ff6123] border-y mt-12 mb-12 h-16 flex items-center font-acumin text-xs">
   <div class="animate-marquee whitespace-nowrap"
     <i class="mx-2 nf nf-md-star_four_points"></i>
     <span class="mx-2">NOT JUST TOOTING OUR HORNS</span>
