--- a/src/components/InquireForm.astro
+++ b/src/components/InquireForm.astro
@@ -69,7 +69,7 @@ const { text } = Astro.props;
 
   <label class="flex flex-col">
     Date of Event
-    <input class="pl-1 text-black" type="date" name="date" />
+    <input class="pl-1 text-black appearance-none" type="date" name="date" />
   </label>
 
   <label class="flex flex-col">
