--- a/src/components/InquireForm.astro
+++ b/src/components/InquireForm.astro
@@ -48,7 +48,7 @@ const { text } = Astro.props;
         CURRENTLY ONLY SERVICING THE CHICAGOLAND AREA
       </p>
     </div>
-    <select class="pl-1 text-black" name="location">
+    <select class="text-black" name="location">
       <option value="chicago">Chicago</option>
       <option value="other">Other</option>
     </select>
@@ -61,7 +61,7 @@ const { text } = Astro.props;
         e.g., wedding, corporate event, party, recording session
       </p>
     </div>
-    <select class="pl-1 text-black" name="location">
+    <select class="text-black" name="location">
       <option value="chicago">Chicago</option>
       <option value="other">Other</option>
     </select>
