--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import RectangleButton from "../components/RectangleButton.astro";
     <FluidBanner text="BORN 2 HORN" />
 
     <div class="md:flex items-center mb-4">
-      <div class="mx-4 md:w-1/2 md:order-last md:mr-6">
+      <div class="mx-4 md:w-1/2 md:order-last md:mr-6 lg:mx-14">
         <DescriptionArticle />
       </div>
       <div class="md:w-1/2 md:ml-4 lg:ml-10">
