Add slide in animation

--- a/src/components/DescriptionArticle.astro
+++ b/src/components/DescriptionArticle.astro
@@ -1,5 +1,5 @@
 <article
-  class="leading-snug mx-auto mt-2 font-acumin text-xs font-[700]"
+  class="to-scroll leading-snug mx-auto mt-2 font-acumin text-xs font-[700]"
 >
   <p>
     Are you a band looking to elevate your sound? Or perhaps a talented
