--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -1,5 +1,5 @@
 <div class="overflow-x-hidden relative border-[#ff6123] border-y mt-12 mb-12 h-16 flex items-center font-acumin text-xs">
-  <div class="animate-marquee whitespace-nowrap"
+  <div class="to-scroll animate-marquee whitespace-nowrap"
     <i class="mx-2 nf nf-md-star_four_points"></i>
     <span class="mx-2">NOT JUST TOOTING OUR HORNS</span>
     <i class="mx-2 nf nf-md-star_four_points"></i>
@@ -15,7 +15,7 @@
     <i class="mx-2 nf nf-md-star_four_points"></i>
   </div>
 
-  <div class="absolute animate-marquee2 whitespace-nowrap"
+  <div class="to-scroll absolute animate-marquee2 whitespace-nowrap"
     <i class="mx-2 nf nf-md-star_four_points"></i>
     <span class="mx-2">NOT JUST TOOTING OUR HORNS</span>
     <i class="mx-2 nf nf-md-star_four_points"></i>
