--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Hire Horn Players Home Page" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="/main.css" />
     <link rel="icon" type="image/svg+xml" href="/trumpet_favicon.svg" />
     <link
       href="https://fonts.googleapis.com/css?family=Anton"
@@ -20,6 +21,7 @@ const { title } = Astro.props;
     <link href="https://fonts.cdnfonts.com/css/acumin-pro" rel="stylesheet" />
     <link href="https://www.nerdfonts.com/assets/css/webfont.css" rel="stylesheet" />
     <meta name="generator" content={Astro.generator} />
+    <script defer src="/app.ts"></script>
     <title>{title}</title>
   </head>
   <body>
