--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import RectangleButton from "../components/RectangleButton.astro";
 <Layout title="HireHornPlayers.com">
   <Header />
   <main>
-    <div class="md:justify-center md:flex md:mx-auto md:w-2/3 md:mt-20 lg:mt-36">
+    <div class="to-scroll md:justify-center md:flex md:mx-auto md:w-2/3 md:mt-20 lg:mt-36">
       <Banner text="HIRE" text2="HORN" text3="PLAYERS" />
       <BannerImage
         src="/brass_instruments.jpeg"
