--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import CircleButton from "../components/CircleButton.astro";
 ---
 
-<footer class="pl-4 pb-4 bg-[#0d0d0d] text-white">
+<footer class="to-scroll pl-4 pb-4 bg-[#0d0d0d] text-white">
   <h2 class="mb-4 pt-8 font-anton text-2xl">BRASS IN THE KNOW</h2>
 
   <p class="font-semibold text-[13px] tracking-tighter mb-4">Please help us grow by joining our email list!</p>
