--- a/src/components/InquireForm.astro
+++ b/src/components/InquireForm.astro
@@ -7,7 +7,7 @@ text: string;
 
 const { text } = Astro.props;
 ---
-<form class="px-4 mt-2 text-white flex flex-col gap-3 font-acumin text-xs" id="inquire" action='/lists' method='post'>
+<form class="to-scroll px-4 mt-2 text-white flex flex-col gap-3 font-acumin text-xs" id="inquire" action='/lists' method='post'>
   <h2 class="mt-8 font-anton text-4xl italic text-[#ff6123]">
     {text}
   </h2>
