--- a/public/main.css
+++ b/public/main.css
@@ -5,8 +5,28 @@
 @layer components {
   .to-scroll {
     opacity: 0;
-    transform: translateY(20%);
+    transform: translateY(10%);
     transition: all .5s;
+  }
+
+  .delay-1 {
+    transition-delay: 200ms;
+  }
+
+  .delay-2 {
+    transition-delay: 400ms;
+  }
+
+  .delay-3 {
+    transition-delay: 600ms;
+  }
+
+  .delay-4 {
+    transition-delay: 800ms;
+  }
+
+  .delay-5 {
+    transition-delay: 1000ms;
   }
 
   .show {
