Form and button styling

--- a/src/components/CircleButton.astro
+++ b/src/components/CircleButton.astro
@@ -7,6 +7,6 @@ const { text } = Astro.props;
 ---
 
 <button
-   class="block mt-3 w-16 mb-4 h-9 rounded-[50%] bg-white text-black font-[1000] font-acumin text-xs italic"
+   class="block mt-3 w-16 mb-4 h-9 rounded-[50%] bg-gray-200 text-black font-[1000] font-acumin text-xs italic"
     type="submit">{text}</button
 >
