Add rows to textarea elements

--- a/src/components/InquireForm.astro
+++ b/src/components/InquireForm.astro
@@ -75,12 +75,12 @@ const { text } = Astro.props;
     <p class="text-gray-400 text-[12px]">
       Any additional info?
     </p>
-    <textarea class="text-black" name="" />
+    <textarea rows="4" class="text-black" name="" />
   </label>
 
   <label class="flex flex-col">
     How did you hear about us?
-    <textarea class="text-black" name="" />
+    <textarea rows="4" class="text-black" name="" />
   </label>
 
   <label class="flex flex-col">
@@ -88,7 +88,7 @@ const { text } = Astro.props;
     <p class="text-gray-400 text-[12px]">
       We're happy to quote you if you don't have a number in mind!
     </p>
-    <textarea class="text-black" name="" />
+    <textarea rows="4" class="text-black" name="" />
   </label>
 
   <CircleButton text="Submit" />
