--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,11 @@ const { title } = Astro.props;
       Courier New,
       monospace;
   }
-  input, select{
+  input, select {
+    background: #e5e7eb;
     height: 1.5rem;
+  }
+  textarea {
+    background: #e5e7eb;
   }
 </style>
