--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ import RectangleButton from "../components/RectangleButton.astro";
       <div class="md:w-1/2">
         <InquireForm text="INQUIRE BELOW" />
       </div>
-      <div class="md:w-1/2 md:self-end">
+      <div class="md:w-1/2 md:self-center">
         <CircleImage
           src="/horn_section.jpeg"
           alt="A horn section playing in the studio"
