--- a/public/main.css
+++ b/public/main.css
@@ -33,5 +33,7 @@
   .show {
     opacity: 1;
     transform: translateY(0);
+    -webkit-transition: translateY(0);
+    visibility: visible;
   }
 }
