Update implementation of transform via tailwind

--- a/src/components/CircleImage.astro
+++ b/src/components/CircleImage.astro
@@ -9,5 +9,5 @@ const { src, alt } = Astro.props;
 ---
 
 <div class="flex flex-col">
-  <img class="to-scroll mx-auto mt-3 w-[60vw] md:w-[50vw] lg:w-[40vw] lg:max-w-[700px] rounded-[50%] md:mt-8 lg:mt-10" src={src} alt={alt} />
+  <img class="slide_in mx-auto mt-3 w-[60vw] md:w-[50vw] lg:w-[40vw] lg:max-w-[700px] rounded-[50%] md:mt-8 lg:mt-10" src={src} alt={alt} />
 </div>
