--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import CircleButton from "../components/CircleButton.astro";
 ---
 
 <footer class="pl-4 pb-8 bg-[#0d0d0d] text-white">
-  <div class="to-scroll">
+  <div class="slide_in">
     <h2 class="mb-4 pt-3 font-anton text-2xl">BRASS IN THE KNOW</h2>
 
     <p class="font-semibold text-[13px] tracking-tighter mb-4">Please help us grow by joining our email list!</p>
