--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <nav class="ml-4 pt-4 font-anton">
   <ul class="flex justify-between">
     <li>
-      <div class="flex justify-start gap-8 to-scroll">HIREHORNPLAYERS.COM</div>
+      <div class="flex justify-start gap-8 slide_in">HIREHORNPLAYERS.COM</div>
     </li>
     <li>
       <div class="flex justify-end gap-4">
