--- a/src/components/InquireForm.astro
+++ b/src/components/InquireForm.astro
@@ -8,7 +8,7 @@ text: string;
 const { text } = Astro.props;
 ---
 <form class="px-4 mt-2 text-white flex flex-col gap-3 font-acumin text-xs" id="inquire" action='/lists' method='post'>
-  <h2 class="to-scroll mt-8 font-anton text-4xl italic text-[#ff6123]">
+  <h2 class="slide_in mt-8 font-anton text-4xl italic text-[#ff6123]">
     {text}
   </h2>
 
