--- a/src/components/DescriptionArticle.astro
+++ b/src/components/DescriptionArticle.astro
@@ -2,32 +2,32 @@
   class="leading-snug mx-auto mt-2 font-acumin text-xs font-[700]"
 >
   <div>
-    <p class="to-scroll delay-1">
+    <p class="slide_in delay-1">
       Are you a band looking to elevate your sound? Or perhaps a talented
       saxophonist, trombonist, or trumpeter seeking the perfect musical
       collaboration? HireHornPlayers.com connects bands with dynamic brass
       players, creating unforgettable musical experiences.
     </p>
     <br />
-    <p class="to-scroll delay-2">
+    <p class="slide_in delay-2">
       🎺 Hornucopia of Talent: Discover a pool of skilled and passionate
       saxophonists, trombonists, and trumpeters eager to bring their unique flair
       to your music.
     </p>
     <br />
-    <p class="to-scroll delay-3">
+    <p class="slide_in delay-3">
       🎙️ Get Down to Brass Tracks: Elevate your studio sessions with the soulful
       tones of experienced brass players! Whether you're crafting a jazz
       masterpiece or infusing pop tracks with brass brilliance, we’ve got you
       covered.
     </p>
     <br />
-    <p class="to-scroll delay-4">
+    <p class="slide_in delay-4">
       🎷 Build Your Dream Horn Section: Craft the ideal ensemble by assembling a
       full horn section that complements your band's sonic identity.
     </p>
     <br />
-    <p class="to-scroll delay-5">
+    <p class="slide_in delay-5">
       🚀 Amplify Your Sound: Unlock the full potential of your music by adding the
       richness and depth that only brass instruments can provide. We hope to
       empower you to explore new sonic dimensions and take your performances to
