--- a/src/components/FluidBanner.astro
+++ b/src/components/FluidBanner.astro
@@ -7,7 +7,7 @@ const { text } = Astro.props;
 ---
 
 <h2
-  class="to-scroll mx-auto w-11/12 text-center font-anton text-[18vw]"
+  class="slide_in mx-auto w-11/12 text-center font-anton text-[18vw]"
 >
   {text}
 </h2>
