Install and run prettier project wide

--- a/src/components/BannerImage.astro
+++ b/src/components/BannerImage.astro
@@ -8,5 +8,9 @@ const { src, alt } = Astro.props;
 ---
 
 <div class="flex flex-col">
-  <img class="mx-auto mt-3 w-60 rounded-[50%] md:mt-8 md:w-[360px] md:max-w-[360px] lg:mt-10 lg:w-[22rem] lg:max-w-[26rem] lg:-ml-5" src={src} alt={alt} />
+  <img
+    class="mx-auto mt-3 w-60 rounded-[50%] md:mt-8 md:w-[360px] md:max-w-[360px] lg:-ml-5 lg:mt-10 lg:w-[22rem] lg:max-w-[26rem]"
+    src={src}
+    alt={alt}
+  />
 </div>
