--- a/src/components/DataSecurityArticle.astro
+++ b/src/components/DataSecurityArticle.astro
@@ -1,10 +1,10 @@
 <article
   class="slide_in mx-auto mt-2 w-[85vw] text-center font-acumin text-xs leading-snug md:w-3/4"
 >
-  <h5 class="mx-auto mt-8 w-11/12 font-anton text-base italic font-[700] ">
+  <h5 class="mx-auto mt-8 w-11/12 font-anton text-base font-[700] italic">
     ENSURING DATA SECURITY WITH A TOUCH OF BRASS
   </h5>
-  <p class="mt-4 mb-6 font-acumin leading-4">
+  <p class="mb-6 mt-4 font-acumin leading-4">
     At hirehornplayers.com, we prioritize your data privacy and security. We
     collect essential information, including your name, email, location, and
     event preferences, to facilitate our services seamlessly. Be assured, your
