--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -1,33 +1,41 @@
-<div class="overflow-x-hidden relative border-[#ff6123] border-y mt-12 mb-12 h-16 flex items-center font-acumin text-xs">
-  <div class="slide_in animate-marquee whitespace-nowrap"
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+<div
+  class="relative mb-12 mt-12 flex h-16 items-center overflow-x-hidden border-y border-[#ff6123] font-acumin text-xs"
+>
+  <div
+    class="animate-marquee whitespace-nowrap"
+    <i
+    class="nf nf-md-star_four_points mx-2"
+  >
     <span class="mx-2">NOT JUST TOOTING OUR HORNS</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
     <span class="mx-2">BLOWING HORNS AND MINDS SINCE 2023</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
     <span class="mx-2">BRASS ACTS ONLY</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
     <span class="mx-2">NOT JUST TOOTING OUR HORNS</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
     <span class="mx-2">BLOWING HORNS AND MINDS SINCE 2023</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
     <span class="mx-2">BRASS ACTS ONLY</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
   </div>
 
-  <div class="slide_in absolute animate-marquee2 whitespace-nowrap"
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+  <div
+    class="absolute animate-marquee2 whitespace-nowrap"
+    <i
+    class="nf nf-md-star_four_points mx-2"
+  >
     <span class="mx-2">NOT JUST TOOTING OUR HORNS</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
     <span class="mx-2">BLOWING HORNS AND MINDS SINCE 2023</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
     <span class="mx-2">BRASS ACTS ONLY</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
     <span class="mx-2">NOT JUST TOOTING OUR HORNS</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
     <span class="mx-2">BLOWING HORNS AND MINDS SINCE 2023</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
     <span class="mx-2">BRASS ACTS ONLY</span>
-    <i class="mx-2 nf nf-md-star_four_points"></i>
+    <i class="nf nf-md-star_four_points mx-2"></i>
   </div>
 </div>
