--- a/src/components/CircleImage.astro
+++ b/src/components/CircleImage.astro
@@ -1,4 +1,3 @@
-
 ---
 interface Props {
   src: string;
@@ -9,5 +8,9 @@ const { src, alt } = Astro.props;
 ---
 
 <div class="flex flex-col">
-  <img class="slide_in mx-auto mt-3 w-[60vw] md:w-[50vw] lg:w-[40vw] lg:max-w-[700px] rounded-[50%] md:mt-8 lg:mt-10" src={src} alt={alt} />
+  <img
+    class="slide_in mx-auto mt-3 w-[60vw] rounded-[50%] md:mt-8 md:w-[50vw] lg:mt-10 lg:w-[40vw] lg:max-w-[700px]"
+    src={src}
+    alt={alt}
+  />
 </div>
