--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,21 +2,29 @@
 import CircleButton from "../components/CircleButton.astro";
 ---
 
-<footer class="pl-4 pb-8 bg-[#0d0d0d] text-white">
+<footer class="bg-[#0d0d0d] pb-8 pl-4 text-white">
   <div class="slide_in">
     <h2 class="mb-4 pt-3 font-anton text-2xl">BRASS IN THE KNOW</h2>
 
-    <p class="font-semibold text-[13px] tracking-tighter mb-4">Please help us grow by joining our email list!</p>
+    <p class="mb-4 text-[13px] font-semibold tracking-tighter">
+      Please help us grow by joining our email list!
+    </p>
 
-    <form action='/lists' method='post' class="mb-4">
-      <input class="font-acumin text-xs py-4 px-5" type='text' name='email_address' placeholder='Email Address' value=''>
+    <form action="/lists" method="post" class="mb-4">
+      <input
+        class="px-5 py-4 font-acumin text-xs"
+        type="text"
+        name="email_address"
+        placeholder="Email Address"
+        value=""
+      />
       <CircleButton text="JOIN" />
     </form>
 
-    <p class="mr-4 tracking-tighter leading-tight text-[12px] lg:w-3/5">
+    <p class="mr-4 text-[12px] leading-tight tracking-tighter lg:w-3/5">
       By signing up for our mailing list, you consent to receive semi-occasional
-      updates. We respect your privacy and will not share your email address with
-      third parties.
+      updates. We respect your privacy and will not share your email address
+      with third parties.
     </p>
   </div>
 </footer>
